 * Fix: Correct various errors in text recording reading and writing.
 * Fix: Don't keep locally forked canvas states around. This reduces memory usage by a bunch, especially when drawing locally.
 * Feature: Add layer on current key frame button is now in the top bar of the timeline, next to the other key frame buttons. Thanks FallenArts for suggesting.

2023-07-31 Version 2.2.0-beta.6
 * Fix: Don't forget account password when entering a wrong session password.
 * Fix: Smoothe out the timing of strokes received over the network to not make them appear jerky because of the paint engine drawing them too fast.
 * Fix: Lock timeline controls when the canvas or user is locked.
 * Feature: Allow adding key frames and an associated layer or group with a single action.
 * Feature: Allow duplicating key frames along with their contents.
 * Fix: Put changing the timeline frame count behind a button, since it might get mixed up with the current frame on accident.
 * Fix: Slow down user markers only for MyPaint brushes and snappy for classic brushes as well as when a new line is started.
 * Feature: Add a flipbook button to the timeline dock.
 * Feature: Hide the indirect mode button in the brush dock instead of just disabling it, since it's hard to tell the difference otherwise.
 * Fix: Fixed a crash when resizing the canvas while an indirect stroke is in progress.
 * Feature: Allow viewing tile and draw context memory usage in the statistics dialog.
 * Server Fix: Make the server GUI exist again, it got lost in the build scripts.
 * Fix: Put unpinning behind operator permissions too, just like pinning.
 * Feature: Improved canvas view. It now allows scrolling further beyond the edges, has more sensible zoom steps and shows messages about locks and canvas transformations.
 * Fix: Make the canvas view not jigger anymore when you zoom it out at certain sizes.
 * Fix: Lock drawing when the user is locked.